--- a/index.ipynb
+++ b/index.ipynb
@@ -277,6 +277,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
+    "    y_values =\n",
     "    for each in x_values:\n",
     "        each*\n",
     "    return {'x': x_values, 'y': }"
