--- a/index.ipynb
+++ b/index.ipynb
@@ -277,9 +277,9 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values =\n",
+    "    y_values = []\n",
     "    for each in x_values:\n",
-    "        each*\n",
+    "        y_values.append(each*m+b)\n",
     "    return {'x': x_values, 'y': }"
    ]
   },
