automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,13 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-383d00f8b65d>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-383d00f8b65d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    retrun {'mode': mode,'name':name, results}\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
     "    results = m_b_data(m, b, x_values)\n",
-    "    retrun "
+    "    retrun {'mode': mode,'name':name, results}"
    ]
   },
   {
