automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,22 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-8539a82ab39b>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-22-39be264058dd>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-8539a82ab39b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    results = {'mode': mode,'name':name, m_b_data(m, b, x_values)}\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-39be264058dd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    results = {'mode': mode,'name':name, m_b_data(m, b, x_values)}\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
     "    results = {'mode': mode,'name':name, m_b_data(m, b, x_values)}\n",
-    "    retrun results"
+    "    return results"
    ]
   },
   {
