--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -312,18 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
-    "    results = {'mode': mode,'name':name }\n",
+    "    results = m_b_data(m, b, x_values)\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
