--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -312,13 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
     "    results = m_b_data(m, b, x_values)\n",
     "    results[mode] = mode\n",
+    "    results[name] = name\n",
     "    return results"
    ]
   },
