--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -325,16 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
+       "{'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0],\n",
+       " 'line': 'line',\n",
+       " 'line function': 'line function'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
