automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -406,7 +406,7 @@
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    yVariance = second_show['attendance']-first_show['attendance']\n",
     "    xVariance = second_show['budget']-first_show['budget']\n",
-    "    m = "
+    "    m = yVariance"
    ]
   },
   {
