automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -399,21 +399,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    yVariance = second_show['attendance']-first_show['attendance']\n",
     "    xVariance = second_show['budget']-first_show['budget']\n",
-    "    return m = yVariance/xVariance"
+    "    return yVariance/xVariance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marginal_return_on_budget(first_show, second_show) # 1.5"
    ]
