--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -572,8 +572,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    m = ((y_values[1,]-x_values[1])/(y_values[0]-x_values[0]))\n",
-    "    return m"
+    "    m = ((y_values[1]-x_values[1])/(y_values[0]-x_values[0]))\n",
+    "    "
    ]
   },
   {
