--- a/index.ipynb
+++ b/index.ipynb
@@ -567,18 +567,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    return (y_values[1]-y_values[1])/(y_values[0]-x_values[0])\n",
+    "    return (y_values[1]-y_values[0])/(x_values[1]-x_values[0])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "1.5"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
