--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if (m == None):\n",
     "        m = slope(x_values,y_values)\n",
-    "        return \n",
+    "        return m*\n",
     "        "
    ]
   },
