automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -605,14 +605,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if (m == None):\n",
     "        m = slope(x_values,y_values)\n",
-    "        return m*x_values[0]\n",
+    "        return y_values[0]-m*x_values[0]\n",
     "        "
    ]
   },
