--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -672,7 +672,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    results['b'] = "
+    "    results['b'] = y_intercept(x_value)"
    ]
   },
   {
