automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -673,7 +673,7 @@
    "source": [
     "def build_starting_line(x_values, y_values):\n",
     "    results['b'] = y_intercept(x_values, y_values)\n",
-    "    results['m']"
+    "    results['m'] = slope (x)"
    ]
   },
   {
