--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -673,7 +673,8 @@
    "source": [
     "def build_starting_line(x_values, y_values):\n",
     "    results['b'] = y_intercept(x_values, y_values)\n",
-    "    results['m'] = slope (x)"
+    "    results['m'] = slope (x_values, y_values)\n",
+    "    return r"
    ]
   },
   {
