--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -572,7 +572,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    return (y_values[1]-y_values[-1])/(x_values[1]-x_values[len()])\n",
+    "    return (y_values[1]-y_values[-1])/(x_values[1]-x_values[len(x_values-)-1])\n",
     "    "
    ]
   },
